# wayland_samples

./: .gitignore  CMakeLists.txt  Makefile  README.md  TexReader.h  anti_aliasing.c  anti_aliasing_headless.c  client_common.h  egl_client.c  egl_client_dumper.c  egl_common.h  egl_desc.h  egl_info.c  egl_sample.c  fxaa.c  fxaa_org.c  fxaa_org_tex.c  gl_error.h  gl_info.c  gldebug.h  global_object_list.c  global_registry_handle.h  hello_world.c  hello_world.cpp  mesh.h  multi_thread.c  output_event_handle.c  pbo_sample.c  sample_client.c  sample_server.c  sample_shading.c  sample_shading_headless.c  sampler_test.c  shaders.h  shm_helper.h  smaa.c  smaa_org.c  surface_creation.c  tex_reader_sample.c  utils.h  (+4 more)
CMake/: FindEGL.cmake  FindGLES2.cmake  FindMali.cmake  FindRt.cmake  FindWayland.cmake
Qt/QtGui/: qguiapplication.h  qopenglcontext.h  qtgui-config.h
Qt/QtGui/5.12.12/QtGui/private/: qguiapplication_p.h  qtgui-config_p.h
Qt/QtGui/5.12.12/QtGui/qpa/: qplatformopenglcontext.h
media/: CMakeLists.txt
media/shaders/: SMAA.hlsl  SMAA_BlendingWeight.frag  SMAA_BlendingWeight.vert  SMAA_EdgeDetection.frag  SMAA_EdgeDetection.vert  SMAA_NeighbourhoodBlending.frag  SMAA_NeighbourhoodBlending.vert  fxaa.frag  fxaa.vert  fxaa_org copy.frag  fxaa_org.frag  fxaa_org.vert  sample_texture.frag  sample_texture.vert  sampler_test.frag  vertex_color.frag  vertex_color.vert  vertex_color_mvp.frag  vertex_color_mvp.vert
